# galaxy-counter

./: .gitignore  LICENSE  README.md  new_dataset_guide.md  pyproject.toml  requirements.txt
configs/: paths.example.yaml
data/metadata/: hsc_train_overlap_df.csv  leagcy_eval_overlap_df.csv  leagcy_train_overlap_df.csv
experiments/aion_benchmark/: aion_model.ipynb  aion_model.py  aion_model_2.py  aion_vs_ours.py  aion_vs_ours_all.py  extract_latents_aion.py  extract_latents_aion_hscprovabgs.py  extract_latents_aion_legacyprovabgs.py  extract_latents_aion_mmu.py  playground.ipynb  playground.py  predict_aion.py  predict_aion_hscprovabgs.py  predict_aion_legacyprovabgs.py  predict_aion_mmu.py
experiments/aion_benchmark/aion_legacy/: aion_legacy_match.py  predict_aion_legacy_v2.py  prepare_aion_legacy.py  (+1 more)
experiments/visualization/: generation_study_neighbors.py  intermediate_visualization.py  laod_pretrained_model.ipynb  latent_cross_prediction.py  load_lenses.py  load_lenses_v2.py  load_lenses_v3.py  load_pretrained_model.py  load_pretrained_model_neighbors.py  load_pretrained_model_neighbors_v2.py  load_pretrained_model_neighbors_v3.py  load_pretrained_multi_umap.py  load_pretrained_no_attn.py  plot_galaxies.ipynb  plot_umap_from_file.py  re_encoding.py  re_encoding_neighbors.py  umap_ebv_visualization.py  umap_visualization.py
scripts/: merge_neighbor_shards.py  run_baseline_train.sh  run_downstream_predict.sh  run_downstream_prepare.sh  run_neighbor_search.sh  run_neighbors_train.sh  save_neighbor_shards.py
src/galaxy_counter/: data.py  neighbors.py
(+25 files in other folders)
